# starter-rust-webuiangular-rspack

./: .gitignore  Cargo.toml  ERROR_HANDLING_GUIDE.md  README.md  build-dist.sh  build-frontend.js  build.rs  index.html  post-build.sh  run.sh  test.html
apps/desktop/: Cargo.toml
apps/desktop/src/: main.rs
config/: app.config.toml
core/backend/: Cargo.toml
core/backend/src/: lib.rs
core/backend/src/application/: mod.rs
core/backend/src/application/events/: mod.rs
core/backend/src/application/services/: mod.rs
core/backend/src/domain/: mod.rs
core/backend/src/domain/entities/: mod.rs
core/backend/src/domain/traits/: mod.rs
core/backend/src/error/: error.rs  handler.rs  kinds.rs  mod.rs  result_ext.rs
core/backend/src/infrastructure/: mod.rs
core/backend/src/infrastructure/config/: mod.rs
core/backend/src/infrastructure/di/: mod.rs
core/backend/src/infrastructure/event_bus/: mod.rs
core/backend/src/plugin/: context.rs  metadata.rs  mod.rs  registry.rs  traits.rs
core/backend/src/presentation/: mod.rs
core/backend/src/presentation/webui/: mod.rs
core/frontend/: package.json
core/frontend/src/: index.ts
core/frontend/src/core/: events.ts  models.ts  plugin.ts  service.ts  viewmodel.ts
core/frontend/src/error/: errors.ts  handler.ts  index.ts  result.ts
docs/: 01-introduction.md  01-overview.md  02-architecture.md  03-build-system.md  04-communication.md  05-dependencies.md  06-improvements.md  07-getting-started.md  08-project-structure.md  ARCHITECTURE.md  BUILD_OUTPUT_LOCATIONS.md  COMMUNICATION_LOG_EXAMPLE.md  CORE_PLUGIN_ARCHITECTURE.md  ERRORS_AS_VALUES.md  ERRORS_AS_VALUES_PLAN.md  ERRORS_AS_VALUES_SUMMARY.md  FILE_SPLITTING_PLAN.md  FILE_SPLITTING_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_CONNECTION_POOLING.md  RESTRUCTURE_PLAN.md  RESTRUCTURING_SUMMARY.md  SERIALIZATION_OPTIONS.md  WEBSOCKET_MONITOR.md
frontend/: .biomeignore  BIOME_SETUP.md  angular.json  custom-webpack.config.js  index.html  package.json  rspack.config.js  rspack.config.ts
frontend-backup/: package.json
frontend-backup/src/: index.html  main.ts
frontend-backup/src/core/: global-error.handler.ts
frontend-backup/src/core/base/: index.ts
frontend-backup/src/core/errors/: result.ts
frontend-backup/src/viewmodels/: window-state.viewmodel.ts
frontend-backup/src/views/: app.component.css  app.component.html  app.component.ts
frontend-backup/src/views/demo/: demo.component.ts
frontend-origin/: biome.json  index.html  package.json  rspack.config.dev.ts  rspack.config.ts  tsconfig.json
frontend-origin/src/: App.ts  error-handler.ts  event-bus-integration.ts  main.ts
frontend-origin/src/lib/: db-service.ts  di.ts  index.ts  service-locator.ts  services.ts  system-info-service.ts  ui-service.ts  winbox-manager.ts  window-service.ts
frontend-origin/src/services/api/: db-service.ts  ui-service.ts  window-service.ts
frontend-origin/src/services/system/: system-info-service.ts
frontend-origin/src/shared/: index.ts
frontend-origin/src/shared/components/: Button.ts  Button.tsx  Card.ts  Card.tsx
frontend-origin/src/shared/hooks/: index.ts
frontend-origin/src/shared/types/: services.ts
frontend-origin/src/shared/utils/: di.ts  event-emitter.ts  helpers.ts  logger-extended.ts  logger.ts  webui-bridge.ts
frontend-origin/src/styles/: app.css  index.css  variables.css  window-content.css
frontend-origin/src/types/: logger.d.ts  winbox.d.ts
frontend/e2e/: protractor.conf.js
frontend/src/: event-bus.ts  events.ts  index.html  main.ts  utils.js  winbox-loader.ts
frontend/src-origin/: global.d.ts  main.ts
frontend/src-origin/app/: app-routing.module.ts  app.component.ts
frontend/src-origin/app/demo/: demo.component.ts
frontend/src/app/: app.component.ts
frontend/src/core/: global-error.handler.ts  global-error.service.ts  index.ts  winbox.service.ts
frontend/src/environments/: environment.prod.ts
frontend/src/error/: global-error.handler.ts  global-error.service.ts
frontend/src/event-bus/: event-bus.ts  events.ts  index.ts
frontend/src/logging/: logger.ts
frontend/src/models/: api.model.ts  card.model.ts  index.ts
frontend/src/styles/: app.css
frontend/src/types/: error.types.ts
frontend/src/use-cases/: App.ts
frontend/src/viewmodels/: api-client.ts  api-client.viewmodel.ts  error-dashboard.viewmodel.ts  event-bus.viewmodel.ts  index.ts  logger.ts  logger.viewmodel.ts  logging.viewmodel.ts  window-state.viewmodel.ts
frontend/src/views/: app.component.css  app.component.html  app.component.ts
plugins/backend/plugin-database/: Cargo.toml  plugin.json
plugins/backend/plugin-database/src/: lib.rs
src/: core.rs  main.rs  utils_demo.rs
src/application/: events.rs  mod.rs
src/application/config/: mod.rs
src/application/user/: mod.rs
src/core/: error.rs  mod.rs
src/core/domain/: mod.rs
src/core/infrastructure/: config.rs  di.rs  error_handler.rs  event_bus.rs  mod.rs
src/core/presentation/: mod.rs
src/domain/entities/: mod.rs
src/domain/traits/: mod.rs
src/infrastructure/: config.rs  database.rs  di.rs  event_bus.rs  logging.rs  mod.rs
src/presentation/: mod.rs
src/shared/: mod.rs
src/shared/crypto/: mod.rs
src/shared/system/: mod.rs
src/use_cases/: mod.rs
src/use_cases/handlers/: api_handlers.rs  db_handlers.rs  sysinfo_handlers.rs
src/utils/: mod.rs
src/utils/compression/: mod.rs
src/utils/crypto/: mod.rs
src/utils/encoding/: mod.rs
src/utils/file_ops/: mod.rs
src/utils/network/: mod.rs
src/utils/security/: mod.rs
src/utils/serialization/: mod.rs
src/utils/system/: mod.rs
src/utils/validation/: mod.rs
static/js/: main.js  webui.js
(+49 files in other folders)
