[package]
name = "rustwebui-app"
version = "1.0.0"
edition = "2024"

[dependencies]
webui-rs = { git = "https://github.com/webui-dev/rust-webui", branch = "main" }
log = "0.4"
env_logger = "0.11"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
tempfile = "3.8"
notify = "6.1"
open = "5.0"
regex = "1.10"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
url = "2.5"
jsonwebtoken = "9.0"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.3"
reqwest = { version = "0.12", features = ["blocking"] }
hex = "0.4"
libc = "0.2"
image = "0.24"
arboard = "3.4"
ini = "1.3"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
zstd = "0.13"
brotli = "8.0"
lz4_flex = "0.11"
snap = "1.1"
ascii85 = "0.2"
punycode = "0.4"
sysctl = "0.5"
hostname = "0.3"
whoami = "2.1"
num_cpus = "1.17"
md5 = "0.7"
humantime = "2.1"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi", "processthreadsapi", "sysinfoapi", "fileapi", "winbase", "winnt", "handleapi", "securitybaseapi", "libloaderapi"] }
windows = { version = "0.57", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Registry", "Win32_UI_Shell"] }
winreg = "0.52"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"

# Additional dependencies (keeping only essential ones)
serde_yaml = "0.9"

[build-dependencies]
cc = "1.0"
walkdir = "2.3"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.wix]
category = "Application"
description = "Rust WebUI Application"

[profile.dev]
debug = false