[package]
name = "rustwebui-app"
version = "1.0.0"
edition = "2024"
description = "Rust WebUI Application - Core + Plugin Architecture"

[dependencies]
# Core library
rustwebui-core = { path = "../core/backend" }

# Plugins
plugin-database = { path = "../plugins/backend/plugin-database" }

# WebUI
webui-rs = { git = "https://github.com/webui-dev/rust-webui", branch = "main" }

# Utilities
log = "0.4"
env_logger = "0.11"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

[build-dependencies]
cc = "1.0"
walkdir = "2.3"

[profile.release]
opt-level = 3
lto = true
