[package]
name = "rustwebui-core"
version = "1.0.0"
edition = "2024"
description = "Core library for Rust WebUI Application"

[features]
default = []
backtrace = ["dep:backtrace"]

[dependencies]
# Core dependencies
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Shared
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Optional backtrace support
backtrace = { version = "0.3", optional = true }

[dev-dependencies]
tokio-test = "0.4"
