[package]
name = "plugin-database"
version = "1.0.0"
edition = "2024"

[dependencies]
rustwebui-core = { path = "../../core/backend" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

[lib]
crate-type = ["cdylib", "rlib"]
